[package]
name = "task-service-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
uuid = { version = "1.2.2", features = ["v4"] }
serde = { version = "1.0.147", features = ["derive"] }
strum = { version = "0.24.1", features = ["derive"] }
env_logger = "0.10.0"

